# scancontext-pybind

./: .gitignore  CMakeLists.txt
examples/: draw_poses.py  test_make_desciptor.py  test_single_session_online_place_recognition.py
python/: wrapper.cpp
